# AutoTrace

./: .gitignore  Cargo.toml  PROJECT_README.md  README.md
backend/: README.md  git.ignore
backend-node/: package.json  pnpm-lock.yaml  tsconfig.json  vitest.config.ts
backend-node/src/: crypto.ts  index.ts  types.ts
backend-node/tests/: vehicles.test.ts
backend-rust/: Cargo.toml
backend-rust/src/: main.rs
backend/backend/src/handlers/: company.rs
backend/backend/src/routes/: mod.rs
backend/src/db/: mod.rs
backend/src/handlers/: company.rs
backend/src/routes/: mod.rs
contracts/: README.md
docs/: architecture.md
frontend/: .gitignore  .npmrc  package.json  tailwind.config.ts  tsconfig.json
frontend/app/: layout.tsx  page.tsx
frontend/app/signup/: page.tsx
frontend/pages/: home.tsx  index.tsx  login.tsx  signup.tsx
frontend/services/: api.ts
frontend/styles/: dashboard.module.css  globals.css
rust-crypto/: Cargo.toml
rust-crypto/src/: main.rs
src/: main.rs
src/models/: company.rs
src/services/: company.rs
